NEXT-17701 - Fix sw-product-price-form alignment issue

--- a/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.scss
@@ -19,4 +19,10 @@ $sw-product-price-suffix-font-size: 20px;
             margin-top: 16px;
         }
     }
+
+    .sw-product-price-form__price-list:not(.has--parent) {
+        .sw-inherit-wrapper__toggle-wrapper {
+            margin: 0;
+        }
+    }
 }
